...
      ),
  ];

  @override
  Widget build(BuildContext context) => McCollection<String, Artifact>(
    model: controller.model,
    title: 'Archives',
    showTitle: !narrow,
    showTree: false,
    focusNode: focus,
    scrollController: scroll,
    filterLabel: controller.next == null
        ? 'Filter archives'
...
